# CozyNanoBot

./: .dockerignore  .env.example  .gitignore  .gitmodules  BOOTSTRAP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: nanobot.yaml
deploy/: .env.dev.example  docker-compose-prd.yml  docker-compose.1panel.yml  docker-compose.dev.yml
deploy/base_runtime/: .env.example  Caddyfile  README.md  build.sh  docker-compose.1panel.yml
docs/reports/: 2026-05-03-code-review-assessment.md
patches/: 0001-executed-tools-metadata.patch  0002-tool-allowlist.patch  0003-yaml-config-loader.patch  0004-parallel-tool-calls.patch
scripts/: apply_patches.sh  dev.sh  start.sh
skills/current_time/: SKILL.md
skills/news/: SKILL.md
skills/search/: SKILL.md
skills/translate/: SKILL.md
skills/unit_convert/: SKILL.md
skills/weather/: SKILL.md
skills/web_fetch/: SKILL.md
src/cozy_mcp_tools/: _common.py
src/cozy_mcp_tools/calculator/: __main__.py
src/cozy_mcp_tools/info_tools/: __main__.py
src/cozy_mcp_tools/news/: __main__.py
src/cozy_mcp_tools/search/: __main__.py
src/cozy_mcp_tools/translate/: __main__.py
src/cozy_mcp_tools/weather/: __main__.py
tests/integration/: test_allowlist_nanobot_block.py  test_nanobot_serve_roundtrip.py
tests/unit/: test_allowlist_patch_unit.py  test_calculator_mcp.py  test_emit_log_format.py  test_info_tools_mcp.py  test_news_mcp.py  test_search_mcp.py  test_tool_logs_roundtrip.py  test_translate_mcp.py  test_weather_mcp.py  test_web_fetch_mcp.py
workspace-assets/: SOUL.md  TOOLS.md  USER.md
(+1 files in other folders)
